--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -16,9 +16,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_TOTAL_CODE_TIME: "False"
           SHOW_PROFILE_VIEWS: "False"
-          SHOW_OS: "False"
           SHOW_PROJECTS: "False"
-          SHOW_EDITORS: "False"
           SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_SHORT_INFO: "False"
           SHOW_LOC_CHART: "False"
+          SHOW_UPDATED_DATE: "False"
